--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -411,6 +411,18 @@
                           />
                         </div>
                       </div>
+
+                      <div class="col-12">
+                        <div class="card-footer text-end">
+                          <a href="wavers-request.html" class="btn btn-primary">
+                            Waver Request
+                          </a>
+                          &nbsp;
+                          <a href="admin-waver-profiles.html" class="btn btn-info">
+                            Waver Profiles
+                          </a>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
