--- a/admin/admin-story-tags.html
+++ b/admin/admin-story-tags.html
@@ -150,7 +150,7 @@
               </a>
             </li>
 
-            <!-- SEO Pages -->
+            <!-- Pages -->
             <li class="menu-header small text-uppercase">
               <span class="menu-header-text">SEO</span>
             </li>
@@ -200,7 +200,7 @@
             <li class="menu-header small text-uppercase">
               <span class="menu-header-text">Page Content</span>
             </li>
-            <li class="menu-item">
+            <li class="menu-item active open">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
                 <div data-i18n="Content">Content</div>
@@ -211,13 +211,11 @@
                     <div data-i18n="Faculties">Faculties</div>
                   </a>
                 </li>
-
-                <li class="menu-item">
+                <li class="menu-item active">
                   <a href="admin-story-tags.html" class="menu-link">
                     <div data-i18n="Story Tags">Story Tags</div>
                   </a>
                 </li>
-
                 <li class="menu-item">
                   <a href="admin-stories.html" class="menu-link">
                     <div data-i18n="Stories">Stories</div>
@@ -283,7 +281,7 @@
               <span class="menu-header-text">Students</span>
             </li>
 
-            <li class="menu-item active open">
+            <li class="menu-item">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-detail"></i>
                 <div data-i18n="Students">Students</div>
@@ -299,7 +297,7 @@
                     <div data-i18n="Tuition Fees">Tuition Fees</div>
                   </a>
                 </li>
-                <li class="menu-item active">
+                <li class="menu-item">
                   <a href="admiin-fess-report.html" class="menu-link">
                     <div data-i18n="Fess Report">Fess Report</div>
                   </a>
@@ -432,9 +430,12 @@
                     <div class="d-flex align-items-end row">
                       <div class="col-sm-7">
                         <div class="card-body">
-                          <h5 class="card-title text-primary">Fees Report !</h5>
+                          <h5 class="card-title text-primary">
+                            List of Story Tags !
+                          </h5>
                           <p class="mb-4">
-                            You can <strong>see</strong> the fees report
+                            You can <strong>add/ edit/ delete</strong> story
+                            tags
                           </p>
                         </div>
                       </div>
@@ -449,56 +450,13 @@
                           />
                         </div>
                       </div>
-
-                      <!-- Student Search Filter -->
-                      <div class="col-lg-12 mb-4">
-                        <form action="">
-                          <div class="input-group mb-4">
-                            <label for="" class="input-group-text">
-                              Choose Class</label
-                            >
-                            <select name="" class="form-select" id="">
-                              <option value="1">Class 1</option>
-                              <option value="2">Class 2</option>
-                              <option value="3">Class 3</option>
-                              <option value="4">Class 4</option>
-                              <option value="5">Class 5</option>
-                            </select>
-                          </div>
-
-                          <div class="input-group mb-4">
-                            <label for="" class="input-group-text">
-                              From Date</label
-                            >
-                            <input type="date" class="form-control" />
-                            &nbsp;&nbsp;&nbsp;
-                            <label for="" class="input-group-text">
-                              To Date</label
-                            >
-                            <input type="date" class="form-control" />
-                          </div>
-
-                          <div class="d-flex justify-content-end">
-                            <button class="btn btn-primary">Search</button>
-                            &nbsp;&nbsp;
-                            <button class="btn btn-info">Export</button>
-                          </div>
-                        </form>
-                      </div>
-
                       <div class="col-lg-12">
                         <div class="table-responsive text-nowrap">
                           <table class="table table-hover table-bordered">
                             <thead>
                               <tr>
                                 <th>SL</th>
-                                <th>Profile</th>
-                                <th>STU ID</th>
-                                <th>Class Name</th>
-                                <th>Parent's/ Student's Name</th>
-                                <th>Email/Mobile</th>
-                                <th>Fees/ Date</th>
-                                <th>Status</th>
+                                <th>Tags</th>
                                 <th>Actions</th>
                               </tr>
                             </thead>
@@ -508,50 +466,28 @@
                                   <strong>1</strong>
                                 </td>
                                 <td>
-                                  <img
-                                    src="./assets/img/avatars/1.png"
-                                    class="w-px-40 h-auto rounded-circle"
-                                  />
-                                </td>
-                                <td>
-                                  <span class="badge bg-label-warning"
-                                    >25-SW-CLASS8-01</span
+                                  <span class="badge bg-label-info"
+                                    >🌟 Star Performer</span
                                   >
                                 </td>
 
                                 <td>
-                                  <span class="badge bg-label-primary"
-                                    >Class 8</span
+                                  <button
+                                    type="button"
+                                    class="btn btn-warning"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#backDropModalEditClass"
                                   >
-                                </td>
-
-                                <td>
-                                  <p class="m-0 p-0">Parent's Name: Xyz Mnp</p>
-                                  <p class="m-0 p-0">Student's Name: Mnp</p>
-                                </td>
-
-                                <td>
-                                  <p class="m-0 p-0">
-                                    <i class="bx bx-envelope"></i> xyz@gmail.com
-                                  </p>
-                                  <p>
-                                    <i class="bx bx-phone"></i> +91-123456789
-                                  </p>
-                                </td>
-                                <td>
-                                  <p class="m-0 p-0">Rs: 89.00</p>
-                                  <p class="m-0 p-0">Paid Date: <span class="badge bg-label-info">01-01-2025</span></p>
-                                  <p class="m-0 p-0">Expiry Date: <span class="badge bg-label-danger">01-01-2025</span></p>
-                                </td>
-                                <td>
-                                  <span class="badge bg-label-success"
-                                    >Paid</span
+                                    Edit
+                                  </button>
+                                  &nbsp;
+                                  <button
+                                    class="btn btn-danger"
+                                    type="button"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#backDropModalDeleteClass"
                                   >
-                                </td>
-
-                                <td>
-                                  <button class="btn btn-info" type="button">
-                                    Send Invoice
+                                    Delete
                                   </button>
                                 </td>
                               </tr>
@@ -565,6 +501,147 @@
               </div>
             </div>
             <!-- / Content -->
+
+            <!-- Add Story Tags Modal -->
+            <div
+              class="modal fade"
+              id="backDropModalAddClass"
+              data-bs-backdrop="static"
+              tabindex="-1"
+            >
+              <div class="modal-dialog modal-dialog-centered">
+                <form class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="backDropModalTitle">
+                      Add Story Tag
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Add Tags With Emoji</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-outline-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-primary">Save</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+
+            <!-- Edit Story Tags Modal -->
+            <div
+              class="modal fade"
+              id="backDropModalEditClass"
+              data-bs-backdrop="static"
+              tabindex="-1"
+            >
+              <div class="modal-dialog modal-dialog-centered">
+                <form class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="backDropModalTitle">
+                      Edit Story Tag
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Update Tags With Emoji</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-outline-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-primary">Save</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+
+            <!-- Delete Story Tags Modal -->
+            <div
+              class="modal fade"
+              id="backDropModalDeleteClass"
+              data-bs-backdrop="static"
+              tabindex="-1"
+            >
+              <div class="modal-dialog modal-dialog-centered">
+                <form class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="backDropModalTitle">
+                      Delete Story Tag
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col mb-3">
+                        <p>Are you sure you want to delete this story tag?</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-outline-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-danger">Delete</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+
+            <!-- Add Button -->
+            <a
+              type="button"
+              data-bs-toggle="modal"
+              data-bs-target="#backDropModalAddClass"
+              class="fab"
+              aria-label="Add new item"
+              title="Add"
+            >
+              Add
+            </a>
 
             <!-- Footer -->
             <footer class="content-footer footer bg-footer-theme">
