--- a/admin/admin-waver-profiles.html
+++ b/admin/admin-waver-profiles.html
@@ -150,7 +150,7 @@
               </a>
             </li>
 
-            <!-- SEO Pages -->
+            <!-- Pages -->
             <li class="menu-header small text-uppercase">
               <span class="menu-header-text">SEO</span>
             </li>
@@ -217,7 +217,6 @@
                     <div data-i18n="Story Tags">Story Tags</div>
                   </a>
                 </li>
-
                 <li class="menu-item">
                   <a href="admin-stories.html" class="menu-link">
                     <div data-i18n="Stories">Stories</div>
@@ -283,7 +282,7 @@
               <span class="menu-header-text">Students</span>
             </li>
 
-            <li class="menu-item active open">
+            <li class="menu-item">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-detail"></i>
                 <div data-i18n="Students">Students</div>
@@ -299,7 +298,7 @@
                     <div data-i18n="Tuition Fees">Tuition Fees</div>
                   </a>
                 </li>
-                <li class="menu-item active">
+                <li class="menu-item">
                   <a href="admiin-fess-report.html" class="menu-link">
                     <div data-i18n="Fess Report">Fess Report</div>
                   </a>
@@ -398,7 +397,7 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="admin-profile.html">
                         <i class="bx bx-user me-2"></i>
                         <span class="align-middle">My Profile</span>
                       </a>
@@ -432,9 +431,11 @@
                     <div class="d-flex align-items-end row">
                       <div class="col-sm-7">
                         <div class="card-body">
-                          <h5 class="card-title text-primary">Fees Report !</h5>
+                          <h5 class="card-title text-primary">
+                            List of Waver Student Profiles !
+                          </h5>
                           <p class="mb-4">
-                            You can <strong>see</strong> the fees report
+                            You can <strong>see/ edit/ delete</strong> waver student profiles
                           </p>
                         </div>
                       </div>
@@ -453,7 +454,7 @@
                       <!-- Student Search Filter -->
                       <div class="col-lg-12 mb-4">
                         <form action="">
-                          <div class="input-group mb-4">
+                          <div class="input-group">
                             <label for="" class="input-group-text">
                               Choose Class</label
                             >
@@ -464,21 +465,7 @@
                               <option value="4">Class 4</option>
                               <option value="5">Class 5</option>
                             </select>
-                          </div>
 
-                          <div class="input-group mb-4">
-                            <label for="" class="input-group-text">
-                              From Date</label
-                            >
-                            <input type="date" class="form-control" />
-                            &nbsp;&nbsp;&nbsp;
-                            <label for="" class="input-group-text">
-                              To Date</label
-                            >
-                            <input type="date" class="form-control" />
-                          </div>
-
-                          <div class="d-flex justify-content-end">
                             <button class="btn btn-primary">Search</button>
                             &nbsp;&nbsp;
                             <button class="btn btn-info">Export</button>
@@ -494,11 +481,12 @@
                                 <th>SL</th>
                                 <th>Profile</th>
                                 <th>STU ID</th>
+                                <th>Student Name</th>
+                                <th>Student Age</th>
                                 <th>Class Name</th>
-                                <th>Parent's/ Student's Name</th>
-                                <th>Email/Mobile</th>
-                                <th>Fees/ Date</th>
-                                <th>Status</th>
+                                <th>Parent's Name</th>
+                                <th>Email</th>
+                                <th>Mobile</th>
                                 <th>Actions</th>
                               </tr>
                             </thead>
@@ -514,44 +502,42 @@
                                   />
                                 </td>
                                 <td>
-                                  <span class="badge bg-label-warning"
+                                  <span class="badge bg-label-danger"
                                     >25-SW-CLASS8-01</span
                                   >
                                 </td>
-
+                                <td>Xyz Mnp</td>
                                 <td>
                                   <span class="badge bg-label-primary"
+                                    >Age: 8</span
+                                  >
+                                </td>
+                                <td>
+                                  <span class="badge bg-label-warning"
                                     >Class 8</span
                                   >
                                 </td>
+                                <td>MNP</td>
+                                <td>xyz@gmail.com</td>
+                                <td>+91-123456789</td>
 
                                 <td>
-                                  <p class="m-0 p-0">Parent's Name: Xyz Mnp</p>
-                                  <p class="m-0 p-0">Student's Name: Mnp</p>
-                                </td>
-
-                                <td>
-                                  <p class="m-0 p-0">
-                                    <i class="bx bx-envelope"></i> xyz@gmail.com
-                                  </p>
-                                  <p>
-                                    <i class="bx bx-phone"></i> +91-123456789
-                                  </p>
-                                </td>
-                                <td>
-                                  <p class="m-0 p-0">Rs: 89.00</p>
-                                  <p class="m-0 p-0">Paid Date: <span class="badge bg-label-info">01-01-2025</span></p>
-                                  <p class="m-0 p-0">Expiry Date: <span class="badge bg-label-danger">01-01-2025</span></p>
-                                </td>
-                                <td>
-                                  <span class="badge bg-label-success"
-                                    >Paid</span
+                                  <button
+                                    type="button"
+                                    class="btn btn-warning"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#backDropModalEditClass"
                                   >
-                                </td>
-
-                                <td>
-                                  <button class="btn btn-info" type="button">
-                                    Send Invoice
+                                    Edit
+                                  </button>
+                                  &nbsp;
+                                  <button
+                                    class="btn btn-danger"
+                                    type="button"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#backDropModalDeleteClass"
+                                  >
+                                    Delete
                                   </button>
                                 </td>
                               </tr>
@@ -565,6 +551,173 @@
               </div>
             </div>
             <!-- / Content -->
+
+            <!-- Edit Student Modal -->
+            <div
+              class="modal fade"
+              id="backDropModalEditClass"
+              data-bs-backdrop="static"
+              tabindex="-1"
+            >
+              <div class="modal-dialog modal-dialog-centered modal-lg">
+                <form class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="backDropModalTitle">
+                      Edit Student
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col mb-3">
+                        <img
+                          src="./assets/img/avatars/1.png"
+                          class="w-px-100 h-auto rounded-circle"
+                          alt=""
+                        />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Profile Image</label
+                        >
+                        <input type="file" class="form-control" />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Parent's Name</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Student's Name</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Email ID</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Mobile</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Student's Age</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Choose Class</label
+                        >
+                        <select name="" id="" class="form-select">
+                          <option value="1">Class 1</option>
+                          <option value="2">Class 2</option>
+                          <option value="3">Class 3</option>
+                          <option value="4">Class 4</option>
+                          <option value="5">Class 5</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Password</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Confirm Password</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-outline-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-primary">Save</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+
+            <!-- Delete Student Modal -->
+            <div
+              class="modal fade"
+              id="backDropModalDeleteClass"
+              data-bs-backdrop="static"
+              tabindex="-1"
+            >
+              <div class="modal-dialog modal-dialog-centered">
+                <form class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="backDropModalTitle">
+                      Delete Student
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col mb-3">
+                        <p>
+                          Are you sure you want to delete this student
+                          <span class="text-danger">25-SW-CLASS8-01</span>?
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-outline-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-danger">Delete</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+
 
             <!-- Footer -->
             <footer class="content-footer footer bg-footer-theme">
