--- a/admin/admin-subjects.html
+++ b/admin/admin-subjects.html
@@ -183,7 +183,7 @@
                 </li>
 
                 <li class="menu-item">
-                  <a href="admin-about-us.html" class="menu-link">
+                  <a href="admin-aboutus.html" class="menu-link">
                     <div data-i18n="About US">About US</div>
                   </a>
                 </li>
@@ -211,6 +211,19 @@
                     <div data-i18n="Faculties">Faculties</div>
                   </a>
                 </li>
+
+                <li class="menu-item">
+                  <a href="admin-aboutus.html" class="menu-link">
+                    <div data-i18n="Faculties">About Us</div>
+                  </a>
+                </li>
+
+                <li class="menu-item">
+                  <a href="admin-privacy-policy.html" class="menu-link">
+                    <div data-i18n="Faculties">Privacy Policy</div>
+                  </a>
+                </li>
+                
                 <li class="menu-item">
                   <a href="admin-story-tags.html" class="menu-link">
                     <div data-i18n="Story Tags">Story Tags</div>
@@ -457,6 +470,8 @@
                                 <th>SL</th>
                                 <th>Class Names</th>
                                 <th>Subjects</th>
+                                <th>Subject BGs</th>
+                                <th>Subject Icons</th>
                                 <th>Actions</th>
                               </tr>
                             </thead>
@@ -467,6 +482,8 @@
                                 </td>
                                 <td>Class 5</td>
                                 <td>Bengali</td>
+                                <td>maths-bg</td>
+                                <td>fas fa-calculator</td>
 
                                 <td>
                                   <button
@@ -543,6 +560,24 @@
                         <input type="text" class="form-control" />
                       </div>
                     </div>
+
+                    <div class="row g-2">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Subject BG</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row g-2">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Subject Icon</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
                   </div>
                   <div class="modal-footer">
                     <button
@@ -598,6 +633,24 @@
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
                           >Subject Name</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row g-2">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Subject BG</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row g-2">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Subject Icon</label
                         >
                         <input type="text" class="form-control" />
                       </div>
