--- a/admin/admin-upload-faculties.html
+++ b/admin/admin-upload-faculties.html
@@ -188,7 +188,7 @@
                 </li>
 
                 <li class="menu-item">
-                  <a href="admin-about-us.html" class="menu-link">
+                  <a href="admin-aboutus.html" class="menu-link">
                     <div data-i18n="About US">About US</div>
                   </a>
                 </li>
@@ -216,6 +216,19 @@
                     <div data-i18n="Faculties">Faculties</div>
                   </a>
                 </li>
+
+                <li class="menu-item">
+                  <a href="admin-aboutus.html" class="menu-link">
+                    <div data-i18n="Faculties">About Us</div>
+                  </a>
+                </li>
+
+                <li class="menu-item">
+                  <a href="admin-privacy-policy.html" class="menu-link">
+                    <div data-i18n="Faculties">Privacy Policy</div>
+                  </a>
+                </li>
+                
                 <li class="menu-item">
                   <a href="admin-story-tags.html" class="menu-link">
                     <div data-i18n="Story Tags">Story Tags</div>
@@ -849,7 +862,7 @@
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Delete Student
+                      Delete Faculty
                     </h5>
                     <button
                       type="button"
