--- a/admin/admin-profile.html
+++ b/admin/admin-profile.html
@@ -141,7 +141,7 @@
                 </li>
 
                 <li class="menu-item">
-                  <a href="admin-about-us.html" class="menu-link">
+                  <a href="admin-aboutus.html" class="menu-link">
                     <div data-i18n="About US">About US</div>
                   </a>
                 </li>
@@ -167,6 +167,18 @@
                 <li class="menu-item">
                   <a href="admin-upload-faculties.html" class="menu-link">
                     <div data-i18n="Faculties">Faculties</div>
+                  </a>
+                </li>
+
+                <li class="menu-item">
+                  <a href="admin-aboutus.html" class="menu-link">
+                    <div data-i18n="Faculties">About Us</div>
+                  </a>
+                </li>
+
+                <li class="menu-item">
+                  <a href="admin-privacy-policy.html" class="menu-link">
+                    <div data-i18n="Faculties">Privacy Policy</div>
                   </a>
                 </li>
 
