--- a/admin/admin-story-tags.html
+++ b/admin/admin-story-tags.html
@@ -183,7 +183,7 @@
                 </li>
 
                 <li class="menu-item">
-                  <a href="admin-about-us.html" class="menu-link">
+                  <a href="admin-aboutus.html" class="menu-link">
                     <div data-i18n="About US">About US</div>
                   </a>
                 </li>
@@ -211,6 +211,19 @@
                     <div data-i18n="Faculties">Faculties</div>
                   </a>
                 </li>
+
+                <li class="menu-item">
+                  <a href="admin-aboutus.html" class="menu-link">
+                    <div data-i18n="Faculties">About Us</div>
+                  </a>
+                </li>
+
+                <li class="menu-item">
+                  <a href="admin-privacy-policy.html" class="menu-link">
+                    <div data-i18n="Faculties">Privacy Policy</div>
+                  </a>
+                </li>
+                
                 <li class="menu-item active">
                   <a href="admin-story-tags.html" class="menu-link">
                     <div data-i18n="Story Tags">Story Tags</div>
