--- a/admin/admiin-fess-report.html
+++ b/admin/admiin-fess-report.html
@@ -21,11 +21,7 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./assets/img/favicon/favicon.ico"
-    />
+    <link rel="icon" type="image/x-icon" href="../logofav.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -217,8 +213,6 @@
                     <div data-i18n="Faculties">About Us</div>
                   </a>
                 </li>
-
-
 
                 <li class="menu-item">
                   <a href="admin-story-tags.html" class="menu-link">
@@ -548,8 +542,18 @@
                                 </td>
                                 <td>
                                   <p class="m-0 p-0">Rs: 89.00</p>
-                                  <p class="m-0 p-0">Paid Date: <span class="badge bg-label-info">01-01-2025</span></p>
-                                  <p class="m-0 p-0">Expiry Date: <span class="badge bg-label-danger">01-01-2025</span></p>
+                                  <p class="m-0 p-0">
+                                    Paid Date:
+                                    <span class="badge bg-label-info"
+                                      >01-01-2025</span
+                                    >
+                                  </p>
+                                  <p class="m-0 p-0">
+                                    Expiry Date:
+                                    <span class="badge bg-label-danger"
+                                      >01-01-2025</span
+                                    >
+                                  </p>
                                 </td>
                                 <td>
                                   <span class="badge bg-label-success"
