--- a/admin/admin-aboutus.html
+++ b/admin/admin-aboutus.html
@@ -21,11 +21,7 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./assets/img/favicon/favicon.ico"
-    />
+    <link rel="icon" type="image/x-icon" href="../logofav.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -1031,9 +1027,7 @@
                   <div class="modal-body">
                     <div class="row">
                       <div class="col mb-3">
-                        <p>
-                          Are you sure you want to delete About Schoolwala?
-                        </p>
+                        <p>Are you sure you want to delete About Schoolwala?</p>
                       </div>
                     </div>
                   </div>
