--- a/admin/admin-login.html
+++ b/admin/admin-login.html
@@ -21,11 +21,7 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./assets/img/favicon/favicon.ico"
-    />
+    <link rel="icon" type="image/x-icon" href="../logofav.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -81,9 +77,11 @@
               <div class="app-brand justify-content-center">
                 <a href="" class="app-brand-link gap-2">
                   <span class="app-brand-logo demo">
-                    <img src="../img/logo.png" width="50px" alt="">
+                    <img src="../img/logo.png" width="50px" alt="" />
                   </span>
-                  <span class="app-brand-text demo text-body fw-bolder" style="text-transform: capitalize;"
+                  <span
+                    class="app-brand-text demo text-body fw-bolder"
+                    style="text-transform: capitalize"
                     >Schoolwala</span
                   >
                 </a>
@@ -101,9 +99,7 @@
                 method="POST"
               >
                 <div class="mb-3">
-                  <label for="email" class="form-label"
-                    >Admin Email</label
-                  >
+                  <label for="email" class="form-label">Admin Email</label>
                   <input
                     type="text"
                     class="form-control"
@@ -115,7 +111,9 @@
                 </div>
                 <div class="mb-3 form-password-toggle">
                   <div class="d-flex justify-content-between">
-                    <label class="form-label" for="password">Admin Password</label>
+                    <label class="form-label" for="password"
+                      >Admin Password</label
+                    >
                     <a href="admin-forget-password.html">
                       <small>Forgot Password?</small>
                     </a>
@@ -165,8 +163,6 @@
         </div>
       </div>
     </div>
-
-
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
