--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Schoolwala — Fun Learning for Kids</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./logofav.png" />
   </head>
 
   <body>
