--- a/login.html
+++ b/login.html
@@ -13,6 +13,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/auth.css" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./logofav.png" />
   </head>
   <body>
     <div class="auth-container">
