--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/about-us.css" />
     <link rel="stylesheet" href="./css/contact.css" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./logofav.png" />
     <style>
       /* Result Popup */
       .result-popup {
