--- a/my-class.html
+++ b/my-class.html
@@ -14,6 +14,8 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/my-class.css" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./logofav.png" />
   </head>
   <body>
     <!-- NAVBAR -->
