--- a/my-class.html
+++ b/my-class.html
@@ -43,7 +43,7 @@
         <div class="nav-menu" id="navMenu">
           <ul>
             <li><a href="school-tuitions.html">School Tuitions</a></li>
-            <li><a href="my-class.html">My Class</a></li>
+            <li><a href="my-class.html" class="active">My Class</a></li>
             <li><a href="#faq">FAQ</a></li>
             <li>
               <a href="student-profile.html" style="max-width: fit-content; max-height: fit-content; margin: 0; padding: 0; display: flex; align-items: center;"
