--- a/school-tuitions.html
+++ b/school-tuitions.html
@@ -33,7 +33,7 @@
 
         <div class="nav-menu" id="navMenu">
           <ul>
-            <li><a href="school-tuitions.html">School Tuitions</a></li>
+            <li><a href="school-tuitions.html" class="active">School Tuitions</a></li>
             <li><a href="my-class.html">My Class</a></li>
             <li><a href="#faq">FAQ</a></li>
             <li><a class="btn-outline" href="login.html">Login/Reg</a></li>
